# moneycontrol-scraper

./: .gitignore  README.md  app.py  db.py  pyproject.toml  requirements.txt  scraper.py
docs/superpowers/plans/: 2026-03-18-moneycontrol-scraper.md
docs/superpowers/specs/: 2026-03-18-moneycontrol-scraper-design.md
tests/: test_db.py  test_scraper.py
