[project]
name = "moneycontrol-scraper"
version = "0.1.0"
description = "Scrape news articles from moneycontrol.com, store in SQLite, view in Streamlit"
requires-python = ">=3.12"
dependencies = [
    "cloudscraper>=1.2.71",
    "beautifulsoup4>=4.12.0",
    "python-dateutil>=2.8.0",
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "lxml>=4.9.0",
    "playwright>=1.40.0",
]

[project.scripts]
scrape = "scraper:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
